fixed the letter-spacing of the gray boxes so it doesn't look funny when on smaller screens

--- a/css/index.css
+++ b/css/index.css
@@ -414,11 +414,12 @@ footer .copyright {
   background-color: #D8D8D8;
   bottom: 20%;
   font-weight: normal;
-  letter-spacing: 10px;
+  letter-spacing: 3px;
   padding: 40px 0;
   position: relative;
   text-align: center;
-  width: 30%;
+  max-width: 300px;
+  width: 33%;
 }
 .large-section p {
   font-size: 20px;
