--- a/less/home.less
+++ b/less/home.less
@@ -131,11 +131,12 @@
     background-color: @graySquare;
     bottom: 20%;
     font-weight: normal;
-    letter-spacing: 10px;
+    letter-spacing: 3px;
     padding: 40px 0;
     position: relative;
     text-align: center;
-    width: 30%;
+    max-width: 300px;
+    width: 33%;
   }
   p {
     font-size: 20px;
